--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,14 @@
             <version>2.8.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.microsoft.cognitiveservices.speech</groupId>
+            <artifactId>client-sdk</artifactId>
+            <version>1.22.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
